--- a/T1807E_HelloMVC/bin/T1807E_HelloMVC.dll.config
+++ b/T1807E_HelloMVC/bin/T1807E_HelloMVC.dll.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,8 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="MyContext" connectionString="server=localhost;port=3306;database=hello_t1807e;uid=root;pwd="
-      providerName="MySql.Data.MySqlClient" />
+    <add name="MyContext" connectionString="server=localhost;port=3306;database=hello_t1807e;uid=root;pwd=" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.webServer>
     <handlers>
