--- a/T1807E_HelloMVC/T1807E_HelloMVC.csproj
+++ b/T1807E_HelloMVC/T1807E_HelloMVC.csproj
@@ -51,6 +51,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="LinqKit, Version=1.1.16.0, Culture=neutral, PublicKeyToken=bc217f8844052a91, processorArchitecture=MSIL">
+      <HintPath>..\packages\LinqKit.1.1.16\lib\net45\LinqKit.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="MySql.Data, Version=6.10.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.6.10.9\lib\net452\MySql.Data.dll</HintPath>
@@ -173,6 +176,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\ClassObjectsController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HelloController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MemberController.cs" />
@@ -193,10 +198,22 @@
     <Compile Include="Migrations\201910301415589_AddSongTable.Designer.cs">
       <DependentUpon>201910301415589_AddSongTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911061140158_AddClassObject.cs" />
+    <Compile Include="Migrations\201911061140158_AddClassObject.Designer.cs">
+      <DependentUpon>201911061140158_AddClassObject.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201911061235565_AddCustomerTable.cs" />
+    <Compile Include="Migrations\201911061235565_AddCustomerTable.Designer.cs">
+      <DependentUpon>201911061235565_AddCustomerTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\ClassObject.cs" />
+    <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Member.cs" />
+    <Compile Include="Models\MixData.cs" />
     <Compile Include="Models\MyDbContext.cs" />
     <Compile Include="Models\Song.cs" />
+    <Compile Include="Models\T1807E_HelloMVCContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -211,6 +228,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\Custom\test.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
@@ -244,6 +262,17 @@
     <Content Include="Views\Hello\Hallo.cshtml" />
     <Content Include="Views\Member\Create.cshtml" />
     <Content Include="Views\Member\Store.cshtml" />
+    <Content Include="Views\ClassObjects\Create.cshtml" />
+    <Content Include="Views\ClassObjects\Delete.cshtml" />
+    <Content Include="Views\ClassObjects\Details.cshtml" />
+    <Content Include="Views\ClassObjects\Edit.cshtml" />
+    <Content Include="Views\ClassObjects\Index.cshtml" />
+    <Content Include="Views\Customers\Create.cshtml" />
+    <Content Include="Views\Customers\Delete.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Customers\Edit.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Shared\_CustomLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -271,6 +300,15 @@
     <EmbeddedResource Include="Migrations\201910301415589_AddSongTable.resx">
       <DependentUpon>201910301415589_AddSongTable.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911061140158_AddClassObject.resx">
+      <DependentUpon>201911061140158_AddClassObject.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911061235565_AddCustomerTable.resx">
+      <DependentUpon>201911061235565_AddCustomerTable.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
