--- a/T1807E_HelloMVC/bin/T1807E_HelloMVC.dll.config
+++ b/T1807E_HelloMVC/bin/T1807E_HelloMVC.dll.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="MyContext" connectionString="server=localhost;port=3306;database=hello_t1807e;uid=root;pwd=" providerName="MySql.Data.MySqlClient" />
+    <add name="T1807E_HelloMVCContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=T1807E_HelloMVCContext-20191106193413; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|T1807E_HelloMVCContext-20191106193413.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.webServer>
     <handlers>
@@ -66,9 +67,10 @@
     </compilers>
   </system.codedom>
   <entityFramework>
-    <providers>
-      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
-    </providers>
+    
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
-  </entityFramework>
+  <providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
+      </provider>
+    </providers></entityFramework>
 </configuration>
