--- a/T1807E_HelloMVC/T1807E_HelloMVC.csproj
+++ b/T1807E_HelloMVC/T1807E_HelloMVC.csproj
@@ -273,6 +273,7 @@
     <Content Include="Views\Customers\Edit.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Shared\_CustomLayout.cshtml" />
+    <Content Include="Views\Customers\_ListCustomer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
